[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
base64 = "0.13.0"

anyhow = "1.0.79"
clap = "4.5.0"

env_logger = "0.11.2"
log = "0.4.20"
chrono = "0.4"
serde_json = "1.0.113"


solana-client = "1.18.2"
solana-sdk = "1.18.2"
solana-transaction-status = "1.18.2"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"
spl-token-client = "0.8.0"


tokio = "1.36.0"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
bitfield = "0.13.2"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3.3"


anchor-client = "0.26.0"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mini-redis = "0.4"
anchor-gen = "0.3.1"

futures = "0.3"

